--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
   </head>
   <body>
   <div class="container">
-    <nav>Navbar</nav>
+    <nav>
+    <ul>
+      <li><a href="#about">About</a></li>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="#resume">Resume</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+    </nav>
+
     <div id = "intro">Intro</div>
     <div id = "about">About</div>
     <div id = "projects">Projects</div>
