--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
     <title>Justin Xia</title>
   </head>
   <body>
@@ -17,11 +20,12 @@
     </ul>
     </nav>
 
-    <div id = "intro">Intro</div>
+    <div id = "intro"><h1>Hi, I'm <span>Justin</span>,<br> a web developer.</h1></div>
     <div id = "about">About</div>
     <div id = "projects">Projects</div>
     <div id = "resume">Resume</div>
     <div id = "contact">Contact</div>
+
   </div>
   </body>
 </html>
