Update About me section

--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
     </nav>
 
     <div id = "intro"><h1>Hi, I'm <span>Justin</span>,<br> a web developer.</h1></div>
-    <div id = "about">About</div>
+    <div id = "about">
+      <img src="images/placeholder.jpg" alt="profile-pic">
+      <h2>About me</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam rutrum, felis et commodo sollicitudin, leo ante tristique elit, ac vulputate magna lorem vel tortor. Sed eu risus enim. Nullam vulputate aliquet orci eget lacinia. Quisque accumsan sapien nec dui viverra, eu molestie libero molestie. Sed dapibus, dui vel tempor fermentum, justo purus volutpat ex, vel tristique erat ante eget nulla. Integer mattis fermentum velit vitae bibendum. Proin consectetur ac sapien quis ornare. Aliquam ante velit, volutpat at mi sed.</p>
+    </div>
     <div id = "projects">Projects</div>
     <div id = "resume">Resume</div>
     <div id = "contact">Contact</div>
