Update contact section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
+  <script src="https://kit.fontawesome.com/6501631fdf.js" crossorigin="anonymous"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
@@ -71,8 +72,16 @@
         </div>
       </div>
     </div>
-    <div id="resume"></div>
-    <div id="contact">Contact</div>
+    <div id="contact">
+      <h2>Contact</h2><br>
+      <p>Email: justinxia9@gmail.com</p><br>
+      <div class="icon-wrapper">
+      <a class="socials" href="https://www.linkedin.com/in/justin-xia/" target="_blank"><i class="fab fa-linkedin icon"></i></a>
+      <a class="socials" href="https://github.com/justin-xia15" target="_blank"><i class="fab fa-github icon"></i></a>
+      <a class="socials" href="mailto:justinxia9@gmail.com"><i class="fas fa-envelope icon"></i></a>
+    </div>
+
+    </div>
 
   </div>
 </body>
