Update project image

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       </div>
 
       <div class="card3">
-        <img class="project-pic" src="images/portfoliosite.png" alt="project-image">
+        <img class="project-pic" src="images/portfolio.png" alt="project-image">
         <div class="card-container">
           <h3>Portfolio</h3>
           <p>Praesent maximus diam id elit condimentum, ut pellentesque quam vestibulum. Sed convallis dui convallis, mollis risus id, pellentesque tellus.</p>
@@ -83,10 +83,10 @@
     <div id="contact">
       <h2>Contact</h2><br>
       <p>Email: justinxia9@gmail.com</p><br>
-      <div class="icon-wrapper">
-        <a class="socials" href="https://www.linkedin.com/in/justin-xia/" target="_blank"><i class="fab fa-linkedin icon"></i></a>
-        <a class="socials" href="https://github.com/justin-xia15" target="_blank"><i class="fab fa-github icon"></i></a>
-        <a class="socials" href="mailto:justinxia9@gmail.com"><i class="fas fa-envelope icon"></i></a>
+      <div class="wrapper">
+        <a class="socials" href="https://www.linkedin.com/in/justin-xia/" target="_blank"><i class="fab fa-linkedin socials-icon"></i></a>
+        <a class="socials" href="https://github.com/justin-xia15" target="_blank"><i class="fab fa-github socials-icon"></i></a>
+        <a class="socials" href="mailto:justinxia9@gmail.com"><i class="fas fa-envelope socials-icon"></i></a>
       </div>
 
     </div>
