--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 
     <div class="overlay-content">
-      <a href="#about">About</a>
-      <a href="#projects">Projects</a>
-      <a href="#">Resume</a>
-      <a href="#contact">Contact</a>
+      <a class="overlay-btn" href="#about">About</a>
+      <a class="overlay-btn" href="#projects">Projects</a>
+      <a class="overlay-btn" href="#">Resume</a>
+      <a class="overlay-btn" href="#contact">Contact</a>
     </div>
 
   </div>
@@ -44,7 +44,7 @@
     <div id="projects">
       <h2>Projects</h2>
 
-      <div class="card1">
+      <div class="card card1">
         <img class="project-pic" src="images/bayway.png" alt="project-image">
         <div class="card-container">
           <h3>Bayway Inn</h3>
@@ -56,7 +56,7 @@
         </div>
       </div>
 
-      <div class="card2">
+      <div class="card card2">
         <img class="project-pic" src="images/tictactoe.png" alt="project-image">
         <div class="card-container">
           <h3>Tic-Tac-Toe</h3>
@@ -68,7 +68,7 @@
         </div>
       </div>
 
-      <div class="card3">
+      <div class="card card3">
         <img class="project-pic" src="images/portfolio.png" alt="project-image">
         <div class="card-container">
           <h3>Portfolio</h3>
