Add aria-label to social links

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <h2>Projects</h2>
 
       <div class="card card1">
-        <img class="project-pic" src="images/bayway.PNG" alt="project-image">
+        <img class="project-pic" src="images/bayway.png" alt="project-image">
         <div class="card-container">
           <h3>Bayway Inn</h3>
           <p>Vivamus ornare elementum laoreet. Vivamus sagittis dolor at quam viverra, at iaculis sapien viverra. Donec porttitor turpis eu nisi venenatis, in tincidunt sapien porttitor.</p>
@@ -57,7 +57,7 @@
       </div>
 
       <div class="card card2">
-        <img class="project-pic" src="images/tictactoe.PNG" alt="project-image">
+        <img class="project-pic" src="images/tictactoe.png" alt="project-image">
         <div class="card-container">
           <h3>Tic-Tac-Toe</h3>
           <p>Ut purus ipsum, egestas non nulla vel, blandit finibus libero. Vestibulum nec magna ac elit maximus luctus id commodo ligula. Duis pharetra leo in bibendum posuere. Integer sed arcu diam.</p>
@@ -69,7 +69,7 @@
       </div>
 
       <div class="card card3">
-        <img class="project-pic" src="images/portfolio.PNG" alt="project-image">
+        <img class="project-pic" src="images/portfolio.png" alt="project-image">
         <div class="card-container">
           <h3>Portfolio</h3>
           <p>Praesent maximus diam id elit condimentum, ut pellentesque quam vestibulum. Sed convallis dui convallis, mollis risus id, pellentesque tellus.</p>
@@ -84,9 +84,9 @@
       <h2>Contact</h2><br>
       <p>Email: justinxia9@gmail.com</p><br>
       <div class="wrapper">
-        <a class="socials" href="https://www.linkedin.com/in/justin-xia/" target="_blank"><i class="fab fa-linkedin socials-icon"></i></a>
-        <a class="socials" href="https://github.com/justin-xia15" target="_blank"><i class="fab fa-github socials-icon"></i></a>
-        <a class="socials" href="mailto:justinxia9@gmail.com"><i class="fas fa-envelope socials-icon"></i></a>
+        <a class="socials" href="https://www.linkedin.com/in/justin-xia/" aria-label="LinkedIn profile" target="_blank" rel="noopener"><i class="fab fa-linkedin socials-icon"></i></a>
+        <a class="socials" href="https://github.com/justin-xia15" aria-label="GitHub profile" target="_blank" rel="noopener"><i class="fab fa-github socials-icon"></i></a>
+        <a class="socials" href="mailto:justinxia9@gmail.com" aria-label="Send me an email" rel="noopener"><i class="fas fa-envelope socials-icon"></i></a>
       </div>
 
     </div>
