Add noopener keyword

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
           <h3>Bayway Inn</h3>
           <p>Vivamus ornare elementum laoreet. Vivamus sagittis dolor at quam viverra, at iaculis sapien viverra. Donec porttitor turpis eu nisi venenatis, in tincidunt sapien porttitor.</p>
 
-          <div class="button"><a href="https://justin-xia15.github.io/Bayway-Inn/" target="_blank" class="btn">Live</a></div>
-          <div class="button"><a href="https://github.com/justin-xia15/Bayway-Inn" target="_blank" class="btn">GitHub</a></div>
+          <div class="button"><a href="https://justin-xia15.github.io/Bayway-Inn/" target="_blank" rel="noopener" class="btn">Live</a></div>
+          <div class="button"><a href="https://github.com/justin-xia15/Bayway-Inn" target="_blank" rel="noopener" class="btn">GitHub</a></div>
 
         </div>
       </div>
@@ -62,8 +62,8 @@
           <h3>Tic-Tac-Toe</h3>
           <p>Ut purus ipsum, egestas non nulla vel, blandit finibus libero. Vestibulum nec magna ac elit maximus luctus id commodo ligula. Duis pharetra leo in bibendum posuere. Integer sed arcu diam.</p>
 
-          <div class="button"><a href="https://justin-xia15.github.io/Tic-Tac-Toe/" target="_blank" class="btn">Live</a></div>
-          <div class="button"><a href="https://github.com/justin-xia15/Tic-Tac-Toe" target="_blank" class="btn">GitHub</a></div>
+          <div class="button"><a href="https://justin-xia15.github.io/Tic-Tac-Toe/" target="_blank" rel="noopener" class="btn">Live</a></div>
+          <div class="button"><a href="https://github.com/justin-xia15/Tic-Tac-Toe" target="_blank" rel="noopener" class="btn">GitHub</a></div>
 
         </div>
       </div>
@@ -74,8 +74,8 @@
           <h3>Portfolio</h3>
           <p>Praesent maximus diam id elit condimentum, ut pellentesque quam vestibulum. Sed convallis dui convallis, mollis risus id, pellentesque tellus.</p>
 
-          <div class="button"><a href="https://justin-xia15.github.io/Bayway-Inn/" target="_blank" class="btn">Live</a></div>
-          <div class="button"><a href="https://github.com/justin-xia15/Bayway-Inn" target="_blank" class="btn">GitHub</a></div>
+          <div class="button"><a href="https://justin-xia15.github.io/Bayway-Inn/" target="_blank" rel="noopener" class="btn">Live</a></div>
+          <div class="button"><a href="https://github.com/justin-xia15/Bayway-Inn" target="_blank" rel="noopener" class="btn">GitHub</a></div>
 
         </div>
       </div>
