Add class to second project image

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </div>
 
       <div class="card card2">
-        <img class="project-pic" src="images/tictactoe.PNG" alt="project-image">
+        <img class="project-pic tic" src="images/tictactoe.PNG" alt="project-image">
         <div class="card-container">
           <h3>Tic-Tac-Toe</h3>
           <p>Ut purus ipsum, egestas non nulla vel, blandit finibus libero. Vestibulum nec magna ac elit maximus luctus id commodo ligula. Duis pharetra leo in bibendum posuere. Integer sed arcu diam.</p>
