--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="overlay-content">
       <a class="overlay-btn" href="#about">About</a>
       <a class="overlay-btn" href="#projects">Projects</a>
-      <a class="overlay-btn" href="#">Resume</a>
+      <a class="overlay-btn" href="documents/JXia_Resume.pdf">Resume</a>
       <a class="overlay-btn" href="#contact">Contact</a>
     </div>
 
