Add back to top button

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 <body>
   <div class="container">
 
+    <button onclick="topFunction()" id="myBtn" title="Go to top">Back to top</button>
+
+
     <div id="myNav" class="overlay">
 
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
