Add project descriptions

--- a/index.html
+++ b/index.html
@@ -40,18 +40,15 @@
     <div id="about">
       <img class="profile" src="images/placeholder.jpg" alt="profile-pic">
       <h2>About me</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam rutrum, felis et commodo sollicitudin, leo ante tristique elit, ac vulputate magna lorem vel tortor. Sed eu risus enim. Nullam vulputate aliquet orci eget lacinia. Quisque
-        accumsan sapien nec dui viverra, eu molestie libero molestie. Sed dapibus, dui vel tempor fermentum, justo purus volutpat ex, vel tristique erat ante eget nulla. Integer mattis fermentum velit vitae bibendum. Proin consectetur ac sapien quis
-        ornare. Aliquam ante velit, volutpat at mi sed.</p>
+      <p>Vivamus ornare elementum laoreet. Vivamus sagittis dolor at quam viverra, at iaculis sapien viverra. Donec porttitor turpis eu nisi venenatis, in tincidunt sapien porttitor.</p>
     </div>
     <div id="projects">
       <h2>Projects</h2>
-
       <div class="card card1">
         <img class="project-pic" src="images/bayway.PNG" alt="project-image">
         <div class="card-container">
           <h3>Bayway Inn</h3>
-          <p>Vivamus ornare elementum laoreet. Vivamus sagittis dolor at quam viverra, at iaculis sapien viverra. Donec porttitor turpis eu nisi venenatis, in tincidunt sapien porttitor.</p>
+          <p>A landing page for a fictional hotel business. It was built with HTML and CSS; JavaScript was used for the navigation bar.</p>
 
           <div class="button"><a href="https://justin-xia15.github.io/Bayway-Inn/" target="_blank" rel="noopener" class="btn">Live</a></div>
           <div class="button"><a href="https://github.com/justin-xia15/Bayway-Inn" target="_blank" rel="noopener" class="btn">GitHub</a></div>
@@ -63,7 +60,7 @@
         <img class="project-pic tic" src="images/tictactoe.PNG" alt="project-image">
         <div class="card-container">
           <h3>Tic-Tac-Toe</h3>
-          <p>Ut purus ipsum, egestas non nulla vel, blandit finibus libero. Vestibulum nec magna ac elit maximus luctus id commodo ligula. Duis pharetra leo in bibendum posuere. Integer sed arcu diam.</p>
+          <p>A simple Tic-Tac-Toe game which allows two players to play against each other. It was built using HTML, CSS, and JavaScript.</p>
 
           <div class="button"><a href="https://justin-xia15.github.io/Tic-Tac-Toe/" target="_blank" rel="noopener" class="btn">Live</a></div>
           <div class="button"><a href="https://github.com/justin-xia15/Tic-Tac-Toe" target="_blank" rel="noopener" class="btn">GitHub</a></div>
@@ -75,7 +72,7 @@
         <img class="project-pic" src="images/portfolio.PNG" alt="project-image">
         <div class="card-container">
           <h3>Portfolio</h3>
-          <p>Praesent maximus diam id elit condimentum, ut pellentesque quam vestibulum. Sed convallis dui convallis, mollis risus id, pellentesque tellus.</p>
+          <p>A personal portfolio website which was built with HTML, CSS, and JavaScript.</p>
 
           <div class="button"><a href="https://justin-xia15.github.io/Bayway-Inn/" target="_blank" rel="noopener" class="btn">Live</a></div>
           <div class="button"><a href="https://github.com/justin-xia15/Bayway-Inn" target="_blank" rel="noopener" class="btn">GitHub</a></div>
@@ -85,7 +82,7 @@
     </div>
     <div id="contact">
       <h2>Contact</h2><br>
-      <p>Email: justinxia9@gmail.com</p><br>
+      <p>Feel free to send me an email at justinxia9@gmail.com</p><br>
       <div class="wrapper">
         <a class="socials" href="https://www.linkedin.com/in/justin-xia/" aria-label="LinkedIn profile" target="_blank" rel="noopener"><i class="fab fa-linkedin socials-icon"></i></a>
         <a class="socials" href="https://github.com/justin-xia15" aria-label="GitHub profile" target="_blank" rel="noopener"><i class="fab fa-github socials-icon"></i></a>
